sample/msvc/error/c2624.cpp
// C2624.cpp
int main() {
   struct C {};
   extern C ac;   // C2624
}
